modified readme, added instructions

--- a/README
+++ b/README
@@ -4,4 +4,21 @@ MATHS FIGHT!
 
 It's a game, where you put your brain to the test, and battle it out with MATHS.
 
+How to play:
+
+1. Have a friend. If you do not have friend, this is tragic.
+
+2. Install MATHS FIGHT on both Fun Kits.
+
+3. One player (you) should press the navswitch to begin. They will be prompted to enter in a question.
+
+4. Secretly enter your question.
+
+5. Send it to your friend with Button 1
+
+6. Your friend will now have to answer the question!
+6.5. There is a timer on your screen! If your friend is too slow then they will lose!
+
+7. Repeat! Perhaps your friend should start this time?
+
 By Ryely Burtenshaw-Day, Maxwell Clarke
