--- a/README
+++ b/README
@@ -16,9 +16,11 @@ How to play:
 
 5. Send it to your friend with Button 1
 
-6. Your friend will now have to answer the question!
+6. Your friend will now have to answer the question! They can use left/right to change the number by 10
+
 6.5. There is a timer on your screen! If your friend is too slow then they will lose!
 
-7. Repeat! Perhaps your friend should start this time?
+7. Repeat! Perhaps you should let your friend start this time?
+
 
 By Ryely Burtenshaw-Day, Maxwell Clarke
